modifs BD
